--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA settings
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.hibernate.ddl-auto=update
 
 #Logging settings
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
