--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,13 +1,19 @@
+
+#Application settings
 spring.application.name=Hr
 server.port=8081
+
+#Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/hr
 spring.datasource.username=root
 spring.datasource.password=ahmed1212
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA settings
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+
+#Logging settings
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
-
 logging.level.org.springframework.web=DEBUG
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto=update
