--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
             <version>6.1.14</version>
         </dependency>
 
-
+		<dependency>
+			<groupId>io.vavr</groupId>
+			<artifactId>vavr</artifactId>
+			<version>0.10.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
